visualization example html and cleaning

--- a/notes/smc_viz/index.html
+++ b/notes/smc_viz/index.html
@@ -21,10 +21,11 @@
       <input type="range" id="yspace_slider" min="10" max="50" value="15" step="1">
       <span id="yspace_value">15</span>
     </div>
+    <label for="left-info-select">info</label>
     <select id="left-info-select">
-      <option value="custom info">Weight</option>
+      <option value="">display info</option>
     </select>
-    <button id="toggle_view">Expand</button>
+    <button id="toggle_collapsed_button">Expand</button>
     <button id="untangle_button">Untangle</button>
     <br />
     <div id="svg">
