add width slider for when collapsed

--- a/notes/smc_viz/index.html
+++ b/notes/smc_viz/index.html
@@ -21,6 +21,11 @@
       <input type="range" id="yspace_slider" min="10" max="50" value="15" step="1">
       <span id="yspace_value">15</span>
     </div>
+    <div>
+      <label for="charWidth_slider">width (collapsed):</label>
+      <input type="range" id="charWidth_slider" min=".2" max="50" value="8" step=".2">
+      <span id="charWidth_value">8</span>
+    </div>
     <label for="left-info-select">info</label>
     <select id="left-info-select">
       <option value="">display info</option>
