add children info

--- a/notes/smc_viz/index.html
+++ b/notes/smc_viz/index.html
@@ -31,7 +31,9 @@
       <option value="">display info</option>
     </select>
     <button id="toggle_collapsed_button">Expand</button>
-    <button id="untangle_button">Untangle</button>
+    <!-- <button id="untangle_button">Untangle</button> -->
+    <input type="checkbox" id="untangle_checkbox">
+    <label for="untangle_checkbox">Untangle</label>
     <br />
     <div id="svg">
       <svg>
